--- a/README.rdoc
+++ b/README.rdoc
@@ -1,5 +1,6 @@
 ==Description
-Aim Assist was created for Riot Games API Challenge 2.0 in order to create a tool that allows ad carry players to adjust their itembuilds after a game you can preview it here https://build-comparsion-thing-ieacatadb.c9.io/
+Aim Assist was created for Riot Games API Challenge 2.0 in order to create a tool that allows ad carry players to adjust their itembuilds after a game
+,preview is here https://build-comparsion-thing-ieacatadb.c9.io/
 ==Usage
 Search for a summoner to get build he used last game, then you may click on champion/items/runes to adjust it, after you can save results as an itemset 
 ==Requirements
